This commit will
lazy load everything that could be lazy loaded and fix any bugs with lazy loading

--- a/elements/crew-team-manager-app/crew-team-manager-app.html
+++ b/elements/crew-team-manager-app/crew-team-manager-app.html
@@ -49,7 +49,8 @@
         <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
             <crew-team-manager-login id="login"></crew-team-manager-login>
 
-            <crew-team-manager-stage id="stage" on-crew-team-manager-stage-action-logout="_handleActionLogout" team-id="[[_teamId]]"></crew-team-manager-stage>
+            <crew-team-manager-stage id="stage" on-crew-team-manager-stage-action-logout="_handleActionLogout" team-id="[[_teamId]]"
+                page="team"></crew-team-manager-stage>
 
         </iron-pages>
 
