--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-oar-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-oar-list.html
@@ -15,9 +15,8 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="../crew-team-manager-oar/crew-team-manager-oar-list-loading.html">
-
 <dom-module id="crew-team-manager-oar-list">
+    <link rel="lazy-import" group="loading" href="../crew-team-manager-oar/crew-team-manager-oar-list-loading.html">
     <link rel="lazy-import" group="results" href="../crew-team-manager-oar/crew-team-manager-oar-list-results.html">
     <link rel="lazy-import" group="message" href="../crew-team-manager-oar/crew-team-manager-oar-list-message.html">
     <template>
@@ -33,7 +32,6 @@
             }
 
             #layout {
-                /*@apply(--layout-flex);*/
                 @apply(--layout-vertical);
             }
 
@@ -79,7 +77,7 @@
                     <paper-icon-button id="add" icon="check" on-click="_handleActionAdd"></paper-icon-button>
                 </app-toolbar>
             </app-header>
-            <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
+            <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
                 <crew-team-manager-oar-list-loading id="loading"></crew-team-manager-oar-list-loading>
                 <crew-team-manager-oar-list-results id="results" data="[[_data]]"></crew-team-manager-oar-list-results>
                 <crew-team-manager-oar-list-message id="message"></crew-team-manager-oar-list-message>
@@ -98,16 +96,16 @@
 
             static get observers() {
                 return [
-                    '_updatePage(_data.splices)'
+                    '_updatePage(_data.splices)',
+                    '_changePage(page)'
                 ]
             }
 
 
             static get properties() {
                 return {
-                    _page: {
+                    page: {
                         type: String,
-                        value: 'loading'
                     },
 
                     _data: {
@@ -117,6 +115,11 @@
                     teamId: String
 
                 }
+            }
+
+            _changePage(page) {
+
+                this.importLazyGroup(page).then(function () {}.bind(this));
             }
 
             _handleActionAdd() {
@@ -137,9 +140,7 @@
                     }
                 }
 
-                this.importLazyGroup(page).then(function () {
-                    this._page = page;
-                }.bind(this));
+                this.page = page;
 
             }
 
