--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
@@ -14,10 +14,8 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="crew-team-manager-schedule-detail-loading.html">
-
-
 <dom-module id="crew-team-manager-schedule-detail">
+    <link rel="lazy-import" group="loading" href="crew-team-manager-schedule-detail-loading.html">
     <link rel="lazy-import" group="results" href="crew-team-manager-schedule-detail-results.html">
     <link rel="lazy-import" group="message" href="crew-team-manager-schedule-detail-message.html">
     <template>
@@ -68,7 +66,7 @@
                     <paper-icon-button id="delete" icon="delete" on-click="_handleActionDelete"></paper-icon-button>
                 </app-toolbar>
             </app-header>
-            <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
+            <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
                 <crew-team-manager-schedule-detail-loading id="loading"></crew-team-manager-schedule-detail-loading>
                 <crew-team-manager-schedule-detail-results id="results" data="{{_data}}"></crew-team-manager-schedule-detail-results>
                 <crew-team-manager-schedule-detail-message id="message"></crew-team-manager-schedule-detail-message>
@@ -90,16 +88,16 @@
 
             static get observers() {
                 return [
-                    '_updatePage(regatta)'
+                    '_updatePage(regatta)',
+                    '_changePage(page)'
                 ]
 
             }
 
             static get properties() {
                 return {
-                    _page: {
-                        type: String,
-                        value: 'loading'
+                    page: {
+                        type: String
                     },
 
                     _data: {
@@ -115,6 +113,11 @@
                 }
             }
 
+            _changePage(page) {
+
+                this.importLazyGroup(page).then(function () {}.bind(this));
+            }
+
             _updatePage(regatta) {
                 let page = 'message';
 
@@ -123,9 +126,7 @@
 
                 }
 
-                this.importLazyGroup(page).then(function () {
-                    this._page = page;
-                }.bind(this));
+                this.page = page;
             }
 
 
