--- a/elements/crew-team-manager-team/crew-team-manager-team-detail.html
+++ b/elements/crew-team-manager-team/crew-team-manager-team-detail.html
@@ -14,10 +14,10 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="crew-team-manager-team-detail-loading.html">
 
 
 <dom-module id="crew-team-manager-team-detail">
+    <link rel="lazy-import" group="loading" href="crew-team-manager-team-detail-loading.html">
     <link rel="lazy-import" group="results" href="crew-team-manager-team-detail-results.html">
     <link rel="lazy-import" group="message" href="crew-team-manager-team-detail-message.html">
     <template>
@@ -72,7 +72,7 @@
                     <paper-icon-button id="logout" icon="exit-to-app" on-click="_handleActionLogout"></paper-icon-button>
                 </app-toolbar>
             </app-header>
-            <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
+            <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
                 <crew-team-manager-team-detail-loading id="loading"></crew-team-manager-team-detail-loading>
                 <crew-team-manager-team-detail-results id="results" data="{{_data}}"></crew-team-manager-team-detail-results>
                 <crew-team-manager-team-detail-message id="message"></crew-team-manager-team-detail-message>
@@ -94,16 +94,16 @@
 
             static get observers() {
                 return [
-                    '_updatePage(team)'
+                    '_updatePage(team)',
+                    '_changePage(page)'
                 ]
 
             }
 
             static get properties() {
                 return {
-                    _page: {
-                        type: String,
-                        value: 'loading'
+                    page: {
+                        type: String
                     },
 
                     _data: {
@@ -119,6 +119,11 @@
                 }
             }
 
+            _changePage(page) {
+
+                this.importLazyGroup(page).then(function () {}.bind(this));
+            }
+
             _updatePage(team) {
 
                 if (team === undefined) {
@@ -132,9 +137,7 @@
 
                 }
 
-                this.importLazyGroup(page).then(function () {
-                    this._page = page;
-                }.bind(this));
+                this.page = page;
             }
 
             _handleActionLogout() {
