--- a/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
@@ -14,10 +14,8 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="crew-team-manager-erg-detail-loading.html">
-
-
 <dom-module id="crew-team-manager-erg-detail">
+    <link rel="lazy-import" group="loading" href="crew-team-manager-erg-detail-loading.html">
     <link rel="lazy-import" group="results" href="crew-team-manager-erg-detail-results.html">
     <link rel="lazy-import" group="message" href="crew-team-manager-erg-detail-message.html">
     <template>
@@ -74,7 +72,7 @@
                     <paper-icon-button id="delete" icon="delete" on-click="_handleActionDelete"></paper-icon-button>
                 </app-toolbar>
             </app-header>
-            <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
+            <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
                 <crew-team-manager-erg-detail-loading id="loading"></crew-team-manager-erg-detail-loading>
                 <crew-team-manager-erg-detail-results id="results" data="{{_data}}" team="{{_team}}"></crew-team-manager-erg-detail-results>
                 <crew-team-manager-erg-detail-message id="message"></crew-team-manager-erg-detail-message>
@@ -96,16 +94,16 @@
 
             static get observers() {
                 return [
-                    '_updatePage(erg)'
+                    '_updatePage(erg)',
+                    '_changePage(page)'
                 ]
 
             }
 
             static get properties() {
                 return {
-                    _page: {
-                        type: String,
-                        value: 'loading'
+                    page: {
+                        type: String
                     },
 
                     _data: {
@@ -126,6 +124,11 @@
                 }
             }
 
+            _changePage(page) {
+
+                this.importLazyGroup(page).then(function () {}.bind(this));
+            }
+
             _updatePage(erg) {
                 let page = 'message';
 
@@ -134,14 +137,11 @@
 
                 }
 
-                this.importLazyGroup(page).then(function () {
-                    this._page = page;
-                }.bind(this));
+                this.page = page;
+
             }
 
-
-
-            _handleActionBack(e) {
+            _handleActionBack() {
                 this.dispatchEvent(new CustomEvent(crewTeamManagerErgDetail.is + '-action-back', {
                     bubbles: true,
                     composed: true
