--- a/elements/crew-team-manager-erg/crew-team-manager-erg.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg.html
@@ -10,10 +10,10 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="crew-team-manager-erg-list.html">
 
 
 <dom-module id="crew-team-manager-erg">
+    <link rel="lazy-import" group="list" href="crew-team-manager-erg-list.html">
     <link rel="lazy-import" group="detail" href="crew-team-manager-erg-detail.html">
     <link rel="lazy-import" group="edit" href="crew-team-manager-erg-edit.html">
     <link rel="lazy-import" group="create" href="crew-team-manager-erg-create.html">
@@ -47,12 +47,12 @@
             }
         </style>
 
-        <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
-            <crew-team-manager-erg-list id="list" menu-hidden$="[[wideLayout]]" on-crew-team-manager-erg-list-results-action-detail="_handleActionDetail"
+        <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
+            <crew-team-manager-erg-list id="list" menu-hidden$="[[wideLayout]]" page="loading" on-crew-team-manager-erg-list-results-action-detail="_handleActionDetail"
                 on-crew-team-manager-erg-list-action-create="_handleActionCreate" team-id="[[teamId]]">
             </crew-team-manager-erg-list>
 
-            <crew-team-manager-erg-detail id="detail" erg="[[_erg]]" on-crew-team-manager-erg-detail-action-back="_handleActionBack"
+            <crew-team-manager-erg-detail id="detail" erg="[[_erg]]" page="loading" on-crew-team-manager-erg-detail-action-back="_handleActionBack"
                 on-crew-team-manager-erg-detail-action-edit="_handleActionEdit" on-crew-team-manager-erg-detail-action-delete="_handleActionDelete">
             </crew-team-manager-erg-detail>
 
@@ -76,11 +76,16 @@
                 return 'crew-team-manager-erg'
             }
 
+            static get observers() {
+                return [
+                    '_changePage(page)'
+                ]
+            }
+
             static get properties() {
                 return {
-                    _page: {
-                        type: String,
-                        value: 'list'
+                    page: {
+                        type: String
                     },
 
                     _edit: {
@@ -104,64 +109,58 @@
                 }
             }
 
+            _changePage(page) {
+
+                this.importLazyGroup(page).then(function () {}.bind(this));
+            }
+
             _handleActionDetail(e) {
-                this.importLazyGroup('detail').then(function () {
-                    this._erg = e.detail.erg;
-                    this._page = 'detail';
-                }.bind(this));
+                this._erg = e.detail.erg;
+                this.page = 'detail';
             }
 
             _handleActionCreate() {
-                this.importLazyGroup('create').then(function () {
-                    this._page = 'create';
-                }.bind(this));
+                this.page = 'create';
             }
 
-            _handleActionBack(e) {
-                this._page = 'list';
+            _handleActionBack() {
+                this.page = 'list';
             }
 
             _handleActionBackOnce(e) {
-                this.importLazyGroup('detail').then(function () {
-                    this._page = 'detail';
-                }.bind(this));
+                this.page = 'detail';
             }
 
             _handleActionEdit(e) {
                 this._edit = e.detail.erg;
-                this.importLazyGroup('edit').then(function () {
-                    this._page = 'edit';
-                }.bind(this));
+                this.page = 'edit';
 
             }
 
             _handleActionSaved(e) {
-                this.importLazyGroup('detail').then(function () {
-                    this._page = 'detail';
-                    this._toast = 'Erg Saved';
-                    this.$.toast.fitInto = this.$.pages;
-                    this.$.toast.open();
-                }.bind(this));
+                this.page = 'detail';
+                this._toast = 'Erg Saved';
+                this.$.toast.fitInto = this.$.pages;
+                this.$.toast.open();
             }
 
             _handleActionDelete(e) {
-                this._page = 'list';
+                this._erg = e.detail.erg;
+                this.page = 'list';
                 this._toast = 'Erg Deleted';
                 this.$.toast.fitInto = this.$.pages;
             }
 
             _handleActionCreated(e) {
-                this.importLazyGroup('detail').then(function () {
-                    this._page = 'detail';
-                    this._toast = 'Erg Created';
-                    this._erg = e.detail.erg;
-                    this.$.toast.fitInto = this.$.pages;
-                    this.$.toast.open();
-                }.bind(this));
+                this.page = 'detail';
+                this._toast = 'Erg Created';
+                this._erg = e.detail.erg;
+                this.$.toast.fitInto = this.$.pages;
+                this.$.toast.open();
             }
 
             _handleActionCancel(e) {
-                this._page = 'list';
+                this.page = 'list';
                 this._toast = 'Cancelled Erg Create';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
