--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
@@ -15,9 +15,8 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="crew-team-manager-fleet-detail-loading.html">
-
 <dom-module id="crew-team-manager-fleet-detail">
+    <link rel="lazy-import" group="loading" href="crew-team-manager-fleet-detail-loading.html">
     <link rel="lazy-import" group="results" href="crew-team-manager-fleet-detail-results.html">
     <link rel="lazy-import" group="message" href="crew-team-manager-fleet-detail-message.html">
     <template>
@@ -105,7 +104,7 @@
                     <paper-icon-button id="delete" icon="delete" on-click="_handleActionDelete"></paper-icon-button>
                 </app-toolbar>
             </app-header>
-            <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
+            <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
                 <crew-team-manager-fleet-detail-loading id="loading"></crew-team-manager-fleet-detail-loading>
                 <crew-team-manager-fleet-detail-results id="results" data="{{_data}}" team={{_team}}></crew-team-manager-fleet-detail-results>
                 <crew-team-manager-fleet-detail-message id="message"></crew-team-manager-fleet-detail-message>
@@ -135,15 +134,15 @@
 
             static get observers() {
                 return [
-                    '_updatePage(boat)'
+                    '_updatePage(boat)',
+                    '_changePage(page)'
                 ]
             }
 
             static get properties() {
                 return {
-                    _page: {
-                        type: String,
-                        value: 'loading'
+                    page: {
+                        type: String
                     },
 
                     _data: {
@@ -166,6 +165,11 @@
                 }
             }
 
+            _changePage(page) {
+
+                this.importLazyGroup(page).then(function () {}.bind(this));
+            }
+
             _updatePage(boat) {
                 let page = 'message';
 
@@ -173,9 +177,7 @@
                     page = 'results';
 
                 }
-                this.importLazyGroup(page).then(function () {
-                    this._page = page;
-                }.bind(this));
+                this.page = page;
             }
 
             _handleActionAdd() {
