--- a/elements/crew-team-manager-oar/crew-team-manager-oar-detail.html
+++ b/elements/crew-team-manager-oar/crew-team-manager-oar-detail.html
@@ -74,7 +74,7 @@
                     <paper-icon-button id="delete" icon="delete" on-click="_handleActionDelete"></paper-icon-button>
                 </app-toolbar>
             </app-header>
-            <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
+            <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
                 <crew-team-manager-oar-detail-loading id="loading"></crew-team-manager-oar-detail-loading>
                 <crew-team-manager-oar-detail-results id="results" data="{{_data}}" team="{{_team}}"></crew-team-manager-oar-detail-results>
                 <crew-team-manager-oar-detail-message id="message"></crew-team-manager-oar-detail-message>
@@ -96,16 +96,16 @@
 
             static get observers() {
                 return [
-                    '_updatePage(oar)'
+                    '_updatePage(oar)',
+                    '_changePage(page)'
                 ]
 
             }
 
             static get properties() {
                 return {
-                    _page: {
-                        type: String,
-                        value: 'loading'
+                    page: {
+                        type: String
                     },
 
                     _data: {
@@ -125,6 +125,11 @@
                 }
             }
 
+            _changePage(page) {
+
+                this.importLazyGroup(page).then(function () {}.bind(this));
+            }
+
             _updatePage(oar) {
                 let page = 'message';
 
@@ -134,11 +139,9 @@
                 }
 
                 this.importLazyGroup(page).then(function () {
-                    this._page = page;
+                    this.page = page;
                 }.bind(this));
             }
-
-
 
             _handleActionBack(e) {
                 this.dispatchEvent(new CustomEvent(crewTeamManagerOarDetail.is + '-action-back', {
