--- a/elements/crew-team-manager-race/crew-team-manager-race.html
+++ b/elements/crew-team-manager-race/crew-team-manager-race.html
@@ -10,9 +10,8 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="crew-team-manager-race-list.html">
-
 <dom-module id="crew-team-manager-race">
+    <link rel="lazy-import" group="list" href="crew-team-manager-race-list.html">
     <link rel="lazy-import" group="detail" href="crew-team-manager-race-detail.html">
     <link rel="lazy-import" group="edit" href="crew-team-manager-race-edit.html">
     <link rel="lazy-import" group="create" href="crew-team-manager-race-create.html">
@@ -46,12 +45,12 @@
             }
         </style>
 
-        <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
-            <crew-team-manager-race-list id="list" menu-hidden$="[[wideLayout]]" on-crew-team-manager-race-list-results-action-detail="_handleActionDetail"
+        <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
+            <crew-team-manager-race-list id="list" menu-hidden$="[[wideLayout]]" page="loading" on-crew-team-manager-race-list-results-action-detail="_handleActionDetail"
                 on-crew-team-manager-race-list-action-create="_handleActionCreate" team-id="[[teamId]]">
             </crew-team-manager-race-list>
 
-            <crew-team-manager-race-detail id="detail" race="[[_race]]" on-crew-team-manager-race-detail-action-back="_handleActionBack"
+            <crew-team-manager-race-detail id="detail" race="[[_race]]" page="loading" on-crew-team-manager-race-detail-action-back="_handleActionBack"
                 on-crew-team-manager-race-detail-action-edit="_handleActionEdit" on-crew-team-manager-race-detail-action-delete="_handleActionDelete">
             </crew-team-manager-race-detail>
 
@@ -75,11 +74,16 @@
                 return 'crew-team-manager-race'
             }
 
+            static get observers() {
+                return [
+                    '_changePage(page)'
+                ]
+            }
+
             static get properties() {
                 return {
-                    _page: {
-                        type: String,
-                        value: 'list'
+                    page: {
+                        type: String
                     },
 
                     _edit: {
@@ -103,58 +107,51 @@
                 }
             }
 
+            _changePage(page) {
+
+                this.importLazyGroup(page).then(function () {}.bind(this));
+            }
+
             _handleActionDetail(e) {
                 this._race = e.detail.race;
-                this.importLazyGroup('detail').then(function () {
-                    this._page = 'detail';
-                }.bind(this));
+                this.page = 'detail';
             }
 
             _handleActionCreate(e) {
-                this.importLazyGroup('create').then(function () {
-                    this._page = 'create';
-                }.bind(this));
+                this.page = 'create';
             }
 
             _handleActionBack(e) {
-                this._page = 'list';
+                this.page = 'list';
             }
 
             _handleActionBackOnce(e) {
-                this.importLazyGroup('detail').then(function () {
-                    this._page = 'detail';
-                }.bind(this));
+                this.page = 'detail';
             }
 
             _handleActionEdit(e) {
 
                 this._edit = e.detail.race;
-                this.importLazyGroup('edit').then(function () {
-                    this._page = 'edit';
-                }.bind(this));
+                this.page = 'edit';
 
             }
 
             _handleActionSaved(e) {
-                this.importLazyGroup('detail').then(function () {
-                    this._page = 'detail';
-                }.bind(this));
+                this.page = 'detail';
                 this._toast = 'Race Saved';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
             }
 
             _handleActionDelete(e) {
-                this._page = 'list';
+                this.page = 'list';
                 this._toast = 'Race Deleted';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
             }
 
             _handleActionCreated(e) {
-                this.importLazyGroup('detail').then(function () {
-                    this._page = 'detail';
-                }.bind(this));
+                this.page = 'detail';
                 this._toast = 'Race Created';
                 this._race = e.detail.race;
                 this.$.toast.fitInto = this.$.pages;
@@ -162,7 +159,7 @@
             }
 
             _handleActionCancel(e) {
-                this._page = 'list';
+                this.page = 'list';
                 this._toast = 'Cancelled Race Create';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
