--- a/elements/crew-team-manager-roster/crew-team-manager-roster-list.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-list.html
@@ -15,10 +15,8 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="crew-team-manager-roster-list-loading.html">
-
-
 <dom-module id="crew-team-manager-roster-list">
+    <link rel="lazy-import" group="loading" href="crew-team-manager-roster-list-loading.html">
     <link rel="lazy-import" group="results" href="crew-team-manager-roster-list-results.html">
     <link rel="lazy-import" group="message" href="crew-team-manager-roster-list-message.html">
     <template>
@@ -79,7 +77,7 @@
                     <paper-icon-button id="logout" icon="exit-to-app" on-click="_handleActionLogout"></paper-icon-button>
                 </app-toolbar>
             </app-header>
-            <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
+            <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
                 <crew-team-manager-roster-list-loading id="loading"></crew-team-manager-roster-list-loading>
                 <crew-team-manager-roster-list-results id="results" data="[[_data]]"></crew-team-manager-roster-list-results>
                 <crew-team-manager-roster-list-message id="message"></crew-team-manager-roster-list-message>
@@ -102,16 +100,16 @@
 
             static get observers() {
                 return [
-                    '_updatePage(_data.splices)'
+                    '_updatePage(_data.splices)',
+                    '_changePage(page)'
                 ]
             }
 
 
             static get properties() {
                 return {
-                    _page: {
-                        type: String,
-                        value: 'loading'
+                    page: {
+                        type: String
                     },
 
                     _data: {
@@ -121,6 +119,11 @@
                     teamId: String
 
                 }
+            }
+
+            _changePage(page) {
+
+                this.importLazyGroup(page).then(function () {}.bind(this));
             }
 
             _handleActionMenu() {
@@ -159,9 +162,7 @@
                     }
                 }
 
-                this.importLazyGroup(page).then(function () {
-                    this._page = page;
-                }.bind(this));
+                this.page = page;
 
             }
 
