--- a/elements/crew-team-manager-team/crew-team-manager-team.html
+++ b/elements/crew-team-manager-team/crew-team-manager-team.html
@@ -10,10 +10,9 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="crew-team-manager-team-detail.html">
 
 <dom-module id="crew-team-manager-team">
-
+    <link rel="lazy-import" group="detail" href="crew-team-manager-team-detail.html">
     <link rel="lazy-import" group="edit" href="crew-team-manager-team-edit.html">
     <template>
         <style>
@@ -41,7 +40,7 @@
             }
         </style>
 
-        <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
+        <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
 
             <crew-team-manager-team-detail menu-hidden$="[[wideLayout]]" id="detail" team="[[teamId]]" on-crew-team-manager-team-detail-action-edit="_handleActionEdit">
             </crew-team-manager-team-detail>
@@ -63,11 +62,16 @@
                 return 'crew-team-manager-team'
             }
 
+            static get observers() {
+                return [
+                    '_changePage(page)'
+                ]
+            }
+
             static get properties() {
                 return {
-                    _page: {
-                        type: String,
-                        value: 'detail'
+                    page: {
+                        type: String
                     },
 
                     _edit: {
@@ -91,21 +95,24 @@
                 }
             }
 
+            _changePage(page) {
+
+                this.importLazyGroup(page).then(function () {}.bind(this));
+            }
+
             _handleActionBackOnce(e) {
-                this._page = 'detail';
+                this.page = 'detail';
             }
 
             _handleActionEdit(e) {
 
                 this._edit = e.detail.team;
-                this.importLazyGroup('edit').then(function () {
-                    this._page = 'edit';
-                }.bind(this));
+                this.page = 'edit';
 
             }
 
             _handleActionSaved(e) {
-                this._page = 'detail';
+                this.page = 'detail';
                 this._toast = 'Team Saved';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
